navigation and footer grid

--- a/src/scss/_constants.scss
+++ b/src/scss/_constants.scss
@@ -71,17 +71,24 @@ $font-size: 16px;
 $line-height: 1.5;
 $line-height-headline: 1.2;
 
+
 // Main colors
 $color-typography: #0a0a0a;
 $color-typography-invert: #fff;
 $color-white: #fff;
+
 $color-red: #9b1c20;
 $color-bordeaux: #6c181c;
+
 $color-grey-light: #edeae6;
+
 $color-grey-middle: #b4aca6;
+
 $color-grey-dark: #867f7c;
-$color-grey-mustard: #d5b05d;
+$color-grey-mustard: #E7BB27;
+
 $color-green: #2f8e71;
+
 $color-grey-headerbackground: #DBD5CD;
 
 
