--- a/src/templates/includes/_includes_footer.ejs
+++ b/src/templates/includes/_includes_footer.ejs
@@ -1,5 +1,70 @@
-<p>includes footer</p>
+<footer class="footer">
+    <div class="footer--container-top width-full">
+        <div class="footer--container-inner width-xl">
+
+            <!-- INCLUDE:  _includes_mobilelogo -->
+            <%- include('_includes_mobile_logo') %>
+            
+            <!-- BEGIN: footer-info -->
+            <div class="footer--info">
+                <!-- Contact -->
+                <ul class="footer--info--list">
+                    <li class="footer--info--item">Contact</li>
+                    <li class="footer--info--item">+(0)93 597 25 4871</li>
+                    <li class="footer--info--item">katelynn.orn@hotmail.com</li>
+                    <li class="footer--info--item">
+                        5523 Research Park Drive, Suite 110 <br>
+                        San Diego, DK 25441
+                    </li>
+                </ul>
+                <!-- Navigation -->
+                <ul class="footer--info--list">
+                    <li class="footer--info--item">Navigation</li>
+
+                    <li class="footer--info--item">
+                        <a href="" class="footer--info--link">Home</a>
+                    </li>
+
+                    <li class="footer--info--item">
+                        <a href="" class="footer--info--link">About</a>
+                    </li>
+                    <li class="footer--info--item">
+                        <a href="" class="footer--info--link">Service</a>
+                    </li>
 
 
-</body>
-</html>
+                    <li class="footer--info--item">Blog</li>
+                    <li class="footer--info--item">Contact</li>
+                </ul>
+                <!-- Service -->
+                <ul class="footer--info--list">
+                    <li class="footer--info--item">Service</li>
+                    <li class="footer--info--item">Home</li>
+                    <li class="footer--info--item">About</li>
+                    <li class="footer--info--item">Service</li>
+                    <li class="footer--info--item">Blog</li>
+                    <li class="footer--info--item">Contact</li>
+                </ul>
+
+                <!-- Social media -->
+                <ul class="footer--info--list">
+                    <li class="footer--info--item">Social media</li>
+                    <li class="footer--info--item">
+                        <a href="">Facebook</a>
+                    </li>
+                    <li class="footer--info--item">
+                        <a href="">Twitter</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- END: footer-info -->
+        </div>
+        <!-- BEGIN: footer--container-bottom -->
+        <div class="footer--container-bottom">
+            <div class="width-xl footer--container-bottom-wrapper">
+                <p>&copy; All right reserved. </p>
+            </div>
+        </div>
+        <!-- END: footer--container-bottom -->
+    </div>
+</footer>
