--- a/src/templates/layout/_default.ejs
+++ b/src/templates/layout/_default.ejs
@@ -1,11 +1,14 @@
-<!-- include default header -->
+<!-- INCLUDE:  _includes_header -->
 <%- include('../includes/_includes_header') %>
 
-<!-- include default navigation -->
+<!-- INCLUDE: _includes_navigation -->
 <%- include('../includes/_includes_navigation') %>
 
-<!-- BODY -->
-<%- body -%>
+<!-- BEGIN: Content elements -->
+<main>
+    <%- body -%>
+</main>
+<!-- END: Content elements -->
 
-<!-- include default footer -->
+<!-- INCLUDE: _includes_footer -->
 <%- include('../includes/_includes_footer') %>
