--- a/src/scss/base/_base_critical.scss
+++ b/src/scss/base/_base_critical.scss
@@ -45,7 +45,7 @@ body, th, td, input, textarea {
 }
 
 h1, .h1 {
-  margin: 0 0 .5em 0;
+  margin: 0;
   font-family: $font-head;
   font-size: 56px;
   font-weight: $font-weight-medium;
@@ -62,7 +62,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  margin: 0 0 40px 0;
+  margin: 0;
   font-family: $font-head;
   font-size: 40px;
   font-weight: $font-weight-medium;
@@ -77,7 +77,7 @@ h2, .h2 {
 }
 
 h3, .h3 {
-  margin: 0 0 .5em 0;
+  margin: 0;
   font-family: $font-head;
   font-size: 28px;
   font-weight: $font-weight-medium;
@@ -92,7 +92,7 @@ h3, .h3 {
 }
 
 h4, .h4 { // Subtitle 1
-  margin: 16px 0;
+  margin: 0;
   font-family: $font-head;
   font-size: 22px;
   font-weight: $font-weight-semibold;
@@ -106,7 +106,7 @@ h4, .h4 { // Subtitle 1
 }
 
 h5, .h5 { // Subtitle 2
-  margin: 24px 0;
+  margin: 0;
   font-family: $font-head;
   font-size: 16px;
   font-weight: $font-weight-semibold;
@@ -124,14 +124,14 @@ p {
 }
 
 ul, ol {
-  margin-bottom: 24px;
+  margin: 0;
 }
 
 ul {
   li {
-    margin-left: 20px;
-    padding-left: 16px;
-    list-style: disc;
+    margin: 0;
+    padding: 0;
+    list-style: none;
   }
 }
 
@@ -153,13 +153,13 @@ img.icon {
 
 a {
   cursor: pointer;
-  color: $color-text-link;
+  //color: $color-text-link;
   font-weight: $font-weight-semibold;
   text-decoration: none;
 
   &:visited,
   &:hover {
-    color: $color-text-hover;
+    //color: $color-text-hover;
   }
 }
 
@@ -193,4 +193,46 @@ blockquote, .quote {
   line-height: 34px;
   font-style: italic;
   letter-spacing: -0.44px;
+}
+
+
+// Desktop logo
+.header--logo {
+  //display: inline-block;
+  padding-left: 50px;
+  background: sassvg("code-solid", $color-grey-mustard) no-repeat left;
+  background-size: 35px;
+  color: gray;
+
+  h4 {
+    line-height: 1;
+    margin-top: 15px;
+  }
+
+  small {
+    position: relative;
+    top: -10px;
+    font-style: italic;
+  }
+}
+
+// Mobile logo
+.header--logo--mobile {
+  //display: inline-block;
+  padding-top: 25px;
+  background: sassvg("code-solid", $color-grey-mustard) no-repeat left 8px;
+  background-size: 35px;
+  color: gray;
+  display: inline-block;
+
+  h4 {
+    line-height: 1;
+    margin-top: 15px;
+  }
+
+  small {
+    position: relative;
+    top: -10px;
+    font-style: italic;
+  }
 }
