--- a/src/templates/includes/_includes_header.ejs
+++ b/src/templates/includes/_includes_header.ejs
@@ -1,60 +1,21 @@
-<!--<meta name="viewport"-->
-<!--      content="width=device-width, initial-scale=1">-->
-
-<!--<meta charset="utf-8">-->
-
-<!--<link rel="preconnect" href="https://fonts.googleapis.com">-->
-<!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
-<!--<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">-->
-
-<!--<link rel="stylesheet"-->
-<!--      type="text/css"-->
-<!--      href="css/critical.min.css"-->
-<!--      media="all">-->
-
-<!--<link rel="stylesheet"-->
-<!--      type="text/css"-->
-<!--      href="css/main.min.css"-->
-<!--      media="all">-->
-
-<!--<link rel="icon"-->
-<!--      type="image/png"-->
-<!--      sizes="16x16"-->
-<!--      href="/favicon-16x16.png?v=1.4.2">-->
-<!--<link rel="icon"-->
-<!--      type="image/png"-->
-<!--      sizes="24x24"-->
-<!--      href="/favicon-24x24.png?v=1.4.2">-->
-<!--<link rel="icon"-->
-<!--      type="image/png"-->
-<!--      sizes="32x32"-->
-<!--      href="/favicon-32x32.png?v=1.4.2">-->
-<!--<link rel="icon"-->
-<!--      type="image/png"-->
-<!--      sizes="194x194"-->
-<!--      href="/favicon-194x194.png?v=1.4.2">-->
-
-
-<!--<link rel="prefetch"-->
-<!--      href="">-->
-
-<!--&lt;!&ndash; @INTEGRATION: Replace canonical &ndash;&gt;-->
-<!--<link rel="canonical"-->
-<!--      href="https://www.peoplefone.ch/">-->
-
-<!--&lt;!&ndash; @INTEGRATION: Replace alternate &ndash;&gt;-->
-<!--<link rel="alternate"-->
-<!--      hreflang="sr-RS"-->
-<!--      href="https://www.peoplefone.ch/">-->
-
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+          content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible"
+          content="ie=edge">
+    <!-- CRITICAL CSS -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="css/critical.min.css">
+    <!-- MAIN CSS -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="css/main.min.css"
+          media="all">
+    <!--  PAGE TITLE -->
+    <title><%= title %></title>
 </head>
 <body>
-<p>inicludes header .....</p>
