--- a/src/templates/includes/_includes_header.ejs
+++ b/src/templates/includes/_includes_header.ejs
@@ -15,6 +15,8 @@
           type="text/css"
           href="css/main.min.css"
           media="all">
+    <!-- CRITICAL JS -->
+    <script src="js/critical.min.js"></script>
     <!--  PAGE TITLE -->
     <title><%= title %></title>
 </head>
