--- a/src/templates/includes/_includes_logo_footer.ejs
+++ b/src/templates/includes/_includes_logo_footer.ejs
@@ -1,4 +1,5 @@
-<a href="/" class="header--logo--mobile">
+<a class="logo--footer"
+   href="/">
     <h4>Milan Milić</h4>
     <small>Web developer</small>
 </a>
