--- a/src/templates/layout/_default.ejs
+++ b/src/templates/layout/_default.ejs
@@ -4,6 +4,9 @@
 <!-- INCLUDE: _includes_navigation -->
 <%- include('../includes/_includes_navigation') %>
 
+<!-- INCLUDE: _includes_navigation_mobile -->
+<%- include('../includes/_includes_navigation_mobile') %>
+
 <!-- BEGIN: Content elements -->
 <main>
     <%- body -%>
