--- a/src/templates/partials/page/_index.ejs
+++ b/src/templates/partials/page/_index.ejs
@@ -1,1 +1,11 @@
-<h1>Index page...</h1>
+<!-- INCLUDE: _ce-hero -->
+<%- include('../../content/_ce-hero.ejs') %>
+
+<!-- INCLUDE: _ce-text-image-teaser -->
+<%- include('../../content/_ce-text-image-teaser') %>
+
+<!-- INCLUDE: _ce-main-technologies -->
+<%- include('../../content/_ce-main-technologies') %>
+
+<!-- INCLUDE: _ce-last-projects -->
+<%- include('../../content/_ce-last-projects') %>
